fix: Set overflow scrolling to touch for elastic content
Important to have native feel when scrolling in modals for example

--- a/stylus/objects/layouts.styl
+++ b/stylus/objects/layouts.styl
@@ -51,6 +51,7 @@ $elastic-content
     background-attachment local, local, scroll, scroll
     background-clip padding-box
     overflow auto
+    -webkit-overflow-scrolling touch
 
 $elastic-bar
     flex 0 0 auto
